@@ -12,6 +12,7 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.ModifyVariable;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import the_fireplace.chatcensor.util.NetworkUtils;
 
@@ -20,18 +21,25 @@ public class NetHandlerPlayServerMixin {
     @Shadow
     public EntityPlayerMP player;
 
-    //@ModifyArg()
-    @Inject(at=@At(value = "INVOKE_ASSIGN", target = "Lnet/minecraft/entity/player/EntityPlayerMP;getChatVisibility()Lnet/minecraft/entity/player/EntityPlayer$EnumChatVisibility;"/*, shift = At.Shift.AFTER, by = 2*/), method = "sendPacket(Lnet/minecraft/network/Packet;)V")
+    @ModifyVariable(method = "sendPacket(Lnet/minecraft/network/Packet;)V", at = @At("HEAD"), argsOnly = true)
+    public Packet<?> modifiedPacket(Packet<?> packetIn) {
+        if(packetIn instanceof SPacketChat)
+            return NetworkUtils.createModifiedChat(player, (SPacketChat) packetIn);
+        return packetIn;
+    }
+
+    @Inject(at=@At("HEAD"), method = "sendPacket(Lnet/minecraft/network/Packet;)V", cancellable = true)
     public void sendPacket(Packet<?> packetIn, CallbackInfo info) {
-        packetIn = NetworkUtils.createModifiedChat(player, (SPacketChat) packetIn);
         if(packetIn == null)
             info.cancel();
     }
-//value = "INVOKE", target = "Lnet/minecraft/server/management/PlayerList;sendMessage(Lnet/minecraft/util/text/ITextComponent;Z)V"
+
+    //value = "INVOKE", target = "Lnet/minecraft/server/management/PlayerList;sendMessage(Lnet/minecraft/util/text/ITextComponent;Z)V"
     @Inject(at=@At("HEAD"), method = "processChatMessage(Lnet/minecraft/network/play/client/CPacketChatMessage;)V")
     public void processChatMessage(CPacketChatMessage packetIn, CallbackInfo info) {//ITextComponent itextcomponent
-        //TODO wait for Bukkit transformations?
+        //TODO will Bukkit mess this up?
         ITextComponent comp = new TextComponentTranslation("chat.type.text", this.player.getDisplayName(), ForgeHooks.newChatWithLinks(packetIn.getMessage()));
         NetworkUtils.messageSenders.putIfAbsent(comp.getUnformattedText().hashCode(), player.getUniqueID());
+        NetworkUtils.messageSendersBackup.putIfAbsent("<"+player.getName()+">", player.getUniqueID());
     }
 }
